@@ -5,59 +5,56 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 /**
- * @title Base64Util
- * @description Base64编码工具类
- * @author zhangkaiyong
- * @date 2018年9月20日 14:15:24
+ * Base64编码工具类
+ * 
+ * @author zkyong
+ * @version v 0.1 
+ * @date 2019年04月12日 14:55:18
  */
-@SuppressWarnings("restriction")
 public class Base64Util {
 
     /**
-     * @title file2Str
-     * @description 将文件转换为Base64编码的字符串
-     * @param path 文件路径
-     * @return String Base64编码的字符串
-     * @date 2018年9月20日 14:15:24
+     * 将文件转换为Base64编码的字符串
+     * 
+     * @param filePath 文件路径
+     * @return String Base64字符串
      */
-    public static String file2Str(String path) {
+    public static String file2Base64(String filePath) {
         InputStream in = null;
         byte[] bytes = null;
         // 读取文件字节数组
         try {
-            in = new FileInputStream(path);
+            in = new FileInputStream(filePath);
             bytes = new byte[in.available()];
             in.read(bytes);
             in.close();
         } catch (IOException e) {
             e.printStackTrace();
         }
+
         // 对字节数组Base64编码
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(bytes);
+        return new String(Base64.getEncoder().encode(bytes));
     }
 
     /**
-     * @title str2File
-     * @description 将Base64编码的字符串转换为文件
-     * @param path 文件路径
-     * @return Boolean 是否转换成功
-     * @date 2018年9月20日 14:15:24
+     * 将Base64编码的字符串转换为文件
+     * 
+     * @param filePath 文件输出路径
+     * @param data 文件Base64编码值
+     * @return Boolean 是否处理成功
      */
-    public static Boolean str2File(String path, String data) {
+    public static Boolean base642File(String filePath, String data) {
         // 数据为空
         if (data == null) {
             return false;
         }
-        BASE64Decoder decoder = new BASE64Decoder();
         try {
+
             // 对字节数组Base64解码
-            byte[] bytes = decoder.decodeBuffer(data);
+            byte[] bytes = Base64.getDecoder().decode(data.getBytes());
             for (int i = 0; i < bytes.length; ++i) {
                 // 调整异常数据
                 if (bytes[i] < 0) {
@@ -65,7 +62,7 @@ public class Base64Util {
                 }
             }
             // 生成新文件
-            OutputStream out = new FileOutputStream(path);
+            OutputStream out = new FileOutputStream(filePath);
             out.write(bytes);
             out.flush();
             out.close();
